Added bootstrap classes for footer

--- a/resources/views/content/ThemeFooter.twig
+++ b/resources/views/content/ThemeFooter.twig
@@ -1,3 +1,12 @@
 <div class="footer">
-<h1>Ich bin der Footer - Bääääm!</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8">
+      <h1>Ich bin der Footer - Bäm!</h1>
+      <p>Hallo</p>
+    </div>
+  </div>
+</div>
+  
 </div>
