--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -19,9 +19,11 @@ body {
 .footer{
   background-color: rgba(0,0,0,0.8) !important;
   color: #fff;
+  height: 400px;
+  text-align: center;
 }
 
 .footer h1
 {
-  color: red !important; 
+  color: red !important;
 }
