Changed priority of footer

--- a/resources/views/content/ThemeFooter.twig
+++ b/resources/views/content/ThemeFooter.twig
@@ -5,8 +5,9 @@
     <div class="col-lg-8">
       <h1>Ich bin der Footer - Bäm!</h1>
       <p>Hallo</p>
+      {{ $NavigationCategories }}
     </div>
   </div>
 </div>
-  
+
 </div>
