--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -21,9 +21,14 @@ body {
   color: #fff;
   height: 400px;
   text-align: center;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .footer h1
 {
-  color: red;
+  color: rgb(252,252,252);
 }
