--- a/resources/views/PageDesign/Partials/Head.twig
+++ b/resources/views/PageDesign/Partials/Head.twig
@@ -4,7 +4,7 @@
 
 <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 
-<link rel="stylesheet" href="{{ plugin_path('ThemePasub') }}/css/ceres.css">
+<link rel="stylesheet" href="{{ plugin_path('ThemePasub') }}/css/main.css">
 
 <!-- Extend the existing style with a template -->
 {{ LayoutContainer.show("ThemePasub::Template.Style") }}
