--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -1,3 +1,13 @@
+{% import "Ceres::PageDesign.Macros.IncludeComponents" as Loader %}
+{% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
+{{ component( "Ceres::PageDesign.Components.Notifications" ) }}
+{{ component( "Ceres::Basket.Components.BasketPreview" ) }}
+{{ component( "Ceres::Customer.Components.Login" ) }}
+{{ component( "Ceres::Customer.Components.Registration" ) }}
+{{ component( "Ceres::Basket.Components.AddItemToBasketOverlay" ) }}
+
+{% set globalBackgroundImage  = config("CeresHipster.global.globalBackgroundImage") %}
+
 <!DOCTYPE html>
 
 {% set lang = services.sessionStorage.getLang() %}
@@ -8,12 +18,9 @@
 
     <head>
         {% include getPartial('head') %}
-
-        {% block PartialHead %}
-        {% endblock %}
     </head>
 
-    <body>
+    <body style="background: url(' {{ globalBackgroundImage }} ') no-repeat center center fixed; background-size:cover;">
         <resource name="user" :data="{ isLoggedIn: {{ frontend.Account.getIsAccountLoggedIn | json_encode() }} }" ></resource>
         <resource name="basket" route="/rest/io/basket/" data="{{ services.basket.getBasket() | json_encode() }}" :events="['AfterBasketChanged!basket']"></resource>
         <resource name="itemSearch" :data="{}"></resource>
