--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -1,7 +1,7 @@
 <header class="top-bar">
     <div class="container-max">
         <div class="row">
-            {{ LayoutContainer.show("Ceres::Header.LeftSide") }}
+            <!--{{ LayoutContainer.show("Ceres::Header.LeftSide") }}
 
             <ul id="controlsList" class="controls-list list-inline">
 
@@ -36,7 +36,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div>-->
 
-
+    <h6>This is our test header.</h6>
 </header>
