--- a/resources/views/PageDesign/Partials/ThemeFooter.twig
+++ b/resources/views/PageDesign/Partials/ThemeFooter.twig
@@ -3,8 +3,11 @@
   <div class="container">
       <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
-              <h1>Ich bin der Footer - Bäm!</h1>
-              <p>Hallo</p>
+              <h3>Sie finden uns auch bei:</h3>
+              <div class="social">Fb</div>
+              <div class="social">Twitter</div>
+              <div class="social">Instagram</div>
+              <div class="social">Dribbble</div>
           </div>
       </div>
   </div>
